# metagpt-learn

./: README.md  day1.md  pyproject.toml  task1.py  task2.py  task3.py
logs/: log.txt
workspace/cli_blackjack/: requirements.txt
workspace/cli_blackjack/cli_blackjack/: card.py  game.py  main.py  player.py  test_card.py  test_game.py  test_player.py
workspace/cli_blackjack/docs/: api_spec_and_tasks.md  prd.md  system_design.md
workspace/cli_blackjack/resources/: data_api_design.mmd
workspace/cli_blackjack_game/: requirements.txt
workspace/cli_blackjack_game/docs/: api_spec_and_tasks.md  prd.md  system_design.md
workspace/cli_blackjack_game/resources/: seq_flow.mmd
